[patch.crates-io.kitsune_p2p_timestamp]
branch = "develop-0.3"
git = "https://github.com/guillemcordoba/holochain"

[patch.crates-io.mr_bundle]
branch = "develop-0.3"
git = "https://github.com/guillemcordoba/holochain"

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
resolver = "2"
members = ["crates/dnas/*/zomes/coordinator/*", "crates/dnas/*/zomes/integrity/*", "src-tauri"]

[workspace.dependencies]
hdk = "0.3.1"
hdi = "0.4.1"
serde = "1.0"
serde_json = "1"
holo_hash = "^0.3.1-rc.0"
holochain_zome_types = "^0.3.1"
holochain_integrity_types = "^0.3.1"
holochain_types = "^0.3.1"
holochain_nonce = "^0.3.1"
holochain_keystore = "^0.3.1"
holochain_holochain_conductor_api = "^0.3.1"
holochain = "^0.3.1"

[workspace.dependencies.personal]
path = "crates/dnas/habits/zomes/coordinator/personal"

[workspace.dependencies.personal_integrity]
path = "crates/dnas/habits/zomes/integrity/personal"