[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
resolver = "2"
members = ["crates/dnas/*/zomes/coordinator/*", "crates/dnas/*/zomes/integrity/*", "src-tauri"]

[workspace.dependencies]
hdk = "0.3.2"
hdi = "0.4.2"
serde = "1.0"
serde_json = "1"

[workspace.dependencies.personal]
path = "crates/dnas/habits/zomes/coordinator/personal"

[workspace.dependencies.personal_integrity]
path = "crates/dnas/habits/zomes/integrity/personal"