[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]

[workspace.dependencies]
hdi = "0.2.5"
hdk = "0.1.5"
holochain_integrity_types = "0.1.3"
serde = "=1.0.166"

[workspace.dependencies.personal]
path = "dnas/habits/zomes/coordinator/personal"

[workspace.dependencies.personal_integrity]
path = "dnas/habits/zomes/integrity/personal"
