[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]

[workspace.dependencies]
hdi = "0.3.2"
hdk = "0.2.2"
holochain_integrity_types = "=0.1.2"
serde = "=1.0.166"
serde_json = "1"

[workspace.dependencies.personal]
path = "dnas/habits/zomes/coordinator/personal"

[workspace.dependencies.personal_integrity]
path = "dnas/habits/zomes/integrity/personal"
